using knockout to load data and manage ui, setting pattern on data round trip

--- a/hip/templates/forms/resource-summary-form.htm
+++ b/hip/templates/forms/resource-summary-form.htm
@@ -1,4 +1,5 @@
 {% extends "views/forms/base.htm" %}
+{% load i18n %}
 
 {% block form_content %}
 <!-- Resource Type CRUD Form -->
@@ -76,13 +77,13 @@
                             <!-- Spacer (for xs screens) -->
                             <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
                             
-                            <select style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="" placeholder="setting"> 
+                            <select style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" placeholder="setting"> 
                                 <option value="1">Primary</option>
                                 <option value="2">Alternate</option>
                                 <option value="3">National Register of Historic Places</option>
                                 <option value="4">National Historic Landmark</option>
                             </select>
-                            <select style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-sm hidden-md hidden-lg" id="" placeholder="setting"> 
+                            <select style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-sm hidden-md hidden-lg" id="resource-name-type" placeholder="setting"> 
                                 <option value="1">Primary</option>
                                 <option value="2">Alternate</option>
                                 <option value="3">National Register of Historic Places</option>
@@ -94,7 +95,7 @@
 
                             <!-- Add Button -->
                             <div class="btn-group">
-                                <button type="button" id="address-button" class="btn btn-primary" style="height: 32px;">Add</button>
+                                <button type="button" id="add-name-button" class="btn btn-primary" style="height: 32px;">Add</button>
                                 <button type="button" class="btn btn-primary dropdown-toggle" style="height: 32px;" data-toggle="dropdown">
                                     <i class="fa fa-chevron-down"></i>
                                     <span class="sr-only">Toggle Dropdown</span>                            
@@ -117,7 +118,7 @@
 <!-- End Name CRUD Form Container -->
 
 <!-- Name Records -->
-<div class="row">
+<div class="row" id="names-form">
     <div class="col-xs-12">
 
         <!-- Address -->
@@ -127,15 +128,22 @@
                     This resource has these names:
                 </dd>
 
-                <dd class="margin-left-5">
-                    {% for name in form.data.names %}
-                    <div class="arches-crud-record" id="classification1-record">
-                        <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this name"><i class="arches-CRUD-delete fa fa-times-circle"></i></a>
-                        <a href="javascript:void(0)" id="name1" class="arches-CRUD-child manage-address" title="Edit this name">{{name.name}}<span class="text-muted arches-crud-type-identifier"> ({{name.type}})</span>
-                        </a>
+                <dd class="margin-left-5" style="display: none;" data-bind="visible: true">
+                    <div data-bind="visible: names().length == 0" class="txt-color-blue">{% trans "No Names Defined" %}</div>   
+                    
+                    <div data-bind='foreach: names'>
+                        <div class="arches-crud-record">
+                            <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this name"><i  data-bind='attr: {"data-id": name}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
+                            <a href="javascript:void(0)" class="arches-CRUD-child manage-address" title="Edit this name"><span data-bind='{text: name}' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier">(<span data-bind='{text: type_name}'></span>)</span>
+                            </a>
+                        </div>
                     </div>
-                    {% endfor %}
                 </dd>
+
+
+                  <!--   <a class="text-primary" href="#" title="Delete File" data-message="Are you ready to delete the file " data-action="delete" data-entityid="" data-bind='attr:{"data-entityid": entityid, "data-message": "Are you ready to delete the file " + label, "data-viewmodelid":viewmodelid}, visible: candelete'><i class="fa fa-sm fa-times-circle"></i></a>
+                    <a class="text-primary" href="" target="_blank" data-bind='{text: label, attr:{href: value}}'></a>
+                </dd> -->
 
             </dl>
         </div>
