--- a/hip/templates/forms/resource-summary-form.htm
+++ b/hip/templates/forms/resource-summary-form.htm
@@ -10,7 +10,7 @@
             <dl>
                 <!-- Title -->
                 <dt>
-                    <h5 id="arches-names-form" class="section-headline">Historic Resource Type</h5>
+                    <h5 id="arches-names-form" class="section-headline">{% trans "Historic Resource Type" %}</h5>
                 </dt>
 
                 <!-- Form -->
@@ -62,7 +62,7 @@
             <dl>
                 <!-- Title -->
                 <dt>
-                    <h5 id="arches-names-form" class="section-headline">Names</h5>
+                    <h5 id="arches-names-form" class="section-headline">{% trans "Names" %}</h5>
                 </dt>
 
                 <!-- Form -->
@@ -72,18 +72,11 @@
                         <div class="col-xs-12">
                                     
                             <input class="form-control arches-form-input hidden-xs" id="resource-name" style="width: 50%;" placeholder="Name">                                    
-                            <input class="form-control arches-form-input hidden-sm hidden-md hidden-lg" id="resource-name" style="width: 100%;" placeholder="Name">
-                            
+
                             <!-- Spacer (for xs screens) -->
                             <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
                             
                             <select style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" placeholder="setting"> 
-                                <option value="1">Primary</option>
-                                <option value="2">Alternate</option>
-                                <option value="3">National Register of Historic Places</option>
-                                <option value="4">National Historic Landmark</option>
-                            </select>
-                            <select style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-sm hidden-md hidden-lg" id="resource-name-type" placeholder="setting"> 
                                 <option value="1">Primary</option>
                                 <option value="2">Alternate</option>
                                 <option value="3">National Register of Historic Places</option>
@@ -95,13 +88,13 @@
 
                             <!-- Add Button -->
                             <div class="btn-group">
-                                <button type="button" id="add-name-button" class="btn btn-primary" style="height: 32px;">Add</button>
+                                <button type="button" id="add-name-button" class="btn btn-primary" style="height: 32px;">{% trans "Add" %}</button>
                                 <button type="button" class="btn btn-primary dropdown-toggle" style="height: 32px;" data-toggle="dropdown">
                                     <i class="fa fa-chevron-down"></i>
-                                    <span class="sr-only">Toggle Dropdown</span>                            
+                                    <span class="sr-only">{% trans "Toggle Dropdown" %}</span>                            
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Discard edits</a></li>
+                                    <li><a href="#">{% trans "Discard edits" %}</a></li>
                                 </ul>
                             </div>
                             <!-- End Add Button -->
@@ -125,7 +118,7 @@
         <div class="arches-crud-child-section">
             <dl>
                 <dd class="arches-CRUD-child-title">
-                    This resource has these names:
+                    {% trans "This resource has these names:" %}
                 </dd>
 
                 <dd class="margin-left-5" style="display: none;" data-bind="visible: true">
@@ -139,11 +132,6 @@
                         </div>
                     </div>
                 </dd>
-
-
-                  <!--   <a class="text-primary" href="#" title="Delete File" data-message="Are you ready to delete the file " data-action="delete" data-entityid="" data-bind='attr:{"data-entityid": entityid, "data-message": "Are you ready to delete the file " + label, "data-viewmodelid":viewmodelid}, visible: candelete'><i class="fa fa-sm fa-times-circle"></i></a>
-                    <a class="text-primary" href="" target="_blank" data-bind='{text: label, attr:{href: value}}'></a>
-                </dd> -->
 
             </dl>
         </div>
@@ -163,7 +151,7 @@
             <dl>
                 <!-- Title -->
                 <dt>
-                    <h5 id="arches-names-form" class="section-headline">Important Dates</h5>
+                    <h5 id="arches-names-form" class="section-headline">{% trans "Important Dates" %}</h5>
                 </dt>
 
                 <!-- Form -->
@@ -173,7 +161,7 @@
 
                         <!-- dates -->    
                         <div class="col-xs-12 col-sm-4"> 
-                            <select style="height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form dates" id="" placeholder="threats">
+                            <select style="height: 36px; padding-top: 2px; width:100%" class="select2 arches-select2-crud-form dates" id="" placeholder="threats">
                                 <option value="1">Start Date</option>
                                 <option value="2">Built Date</option>
                                 <option value="3">Birth Date</option>
@@ -207,10 +195,10 @@
                             <button type="button" id="address-button" class="btn btn-primary" style="height: 32px;">Add</button>
                             <button type="button" class="btn btn-primary dropdown-toggle" style="height: 32px;" data-toggle="dropdown">
                                 <i class="fa fa-chevron-down"></i>
-                                <span class="sr-only">Toggle Dropdown</span>                            
+                                <span class="sr-only">{% trans "Toggle Dropdown" %}</span>                            
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">Discard edits</a></li>
+                                <li><a href="#">{% trans "Discard edits" %}</a></li>
                             </ul>
                         </div>
                         <!-- End Add Button -->
@@ -232,7 +220,7 @@
         <div class="arches-crud-child-section">
             <dl>
                 <dd class="arches-CRUD-child-title">
-                    These dates are associated with this resource:
+                    {% trans "These dates are associated with this resource:" %}
                 </dd>
 
                 <dd class="margin-left-5">
@@ -270,7 +258,7 @@
             <dl>
                 <!-- Title -->
                 <dt>
-                    <h5 id="arches-names-form" class="section-headline">Subjects</h5>
+                    <h5 id="arches-names-form" class="section-headline">{% trans "Subjects" %}</h5>
                 </dt>
 
                 <!-- Form -->
@@ -279,8 +267,6 @@
                     <div class="row">
 
                         <div class="col-xs-12 padding-left-0">
-
-                            <!-- Form for screens > xs -->
                             <form class="form-inline arches-form hidden-xs" role="form">
                                 <div class="form-group" style="width: 100%">
 
@@ -289,34 +275,6 @@
                                         <option value="2">Fox Studios</option>
                                         <option value="3">Garment District</option>
                                         <option value="4">Los Angeles Times</option>
-                                    </select>&nbsp;
-
-                                    <!-- Add Button -->
-                                    <div class="btn-group">
-                                        <button type="button" id="address-button" class="btn btn-primary" style="height: 32px;">Add</button>
-                                        <button type="button" class="btn btn-primary dropdown-toggle" style="height: 32px;" data-toggle="dropdown">
-                                            <i class="fa fa-chevron-down"></i>
-                                            <span class="sr-only">Toggle Dropdown</span>                            
-                                        </button>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#">Discard edits</a></li>
-                                        </ul>
-                                    </div>
-                                    <!-- End Add Button -->
-
-                                </div>
-                            </form>
-                            <!-- Form for screens > xs -->
-
-                            <!-- Form for screens = xs -->
-                            <form class="form-inline arches-form hidden-sm hidden-md hidden-lg" role="form">
-                                <div class="form-group" style="width: 100%">
-
-                                    <select style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form description-type" id="" placeholder="setting"> 
-                                        <option value="1">Primary description</option>
-                                        <option value="2">General description</option>
-                                        <option value="3">Architectural description</option>
-                                        <option value="4">Summary of Significance</option>
                                     </select>
 
                                     <!-- Spacer (for xs screens) -->
@@ -324,20 +282,19 @@
 
                                     <!-- Add Button -->
                                     <div class="btn-group">
-                                        <button type="button" id="address-button" class="btn btn-primary" style="height: 32px;">Add</button>
+                                        <button type="button" id="address-button" class="btn btn-primary" style="height: 32px;">{% trans "Add" %}</button>
                                         <button type="button" class="btn btn-primary dropdown-toggle" style="height: 32px;" data-toggle="dropdown">
                                             <i class="fa fa-chevron-down"></i>
-                                            <span class="sr-only">Toggle Dropdown</span>                            
+                                            <span class="sr-only">{% trans "Toggle Dropdown" %}</span>                            
                                         </button>
                                         <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#">Discard edits</a></li>
+                                            <li><a href="#">{% trans "Discard edits" %}</a></li>
                                         </ul>
                                     </div>
                                     <!-- End Add Button -->
 
                                 </div>
                             </form>
-                            <!-- Form for screens = xs -->
                         </div>
                     </div>
                 </dd>
