--- a/hip/templates/forms/resource-summary-form.htm
+++ b/hip/templates/forms/resource-summary-form.htm
@@ -121,8 +121,8 @@
                     
                     <div data-bind='foreach: NAME_E41'>
                         <div class="arches-crud-record">
-                            <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this name"><i  data-bind='attr: {"data-NAME_E41_value": NAME_E41_value}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
-                            <a href="javascript:void(0)" class="arches-CRUD-child manage-address" title="Edit this name"><span data-bind='{text: NAME_E41_value}' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier">(<span data-bind='{text: NAME_TYPE_E55_label}'></span>)</span>
+                            <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this name"><i  data-bind='attr: {"data-NAME_E41__value": NAME_E41__value}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
+                            <a href="javascript:void(0)" class="arches-CRUD-child manage-address" title="Edit this name"><span data-bind='{text: NAME_E41__value}' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier">(<span data-bind='{text: NAME_TYPE_E55__label}'></span>)</span>
                             </a>
                         </div>
                     </div>
