--- a/hip/templates/forms/resource-summary-form.htm
+++ b/hip/templates/forms/resource-summary-form.htm
@@ -67,12 +67,12 @@
 
                         <div class="col-xs-12">
                                     
-                            <input class="form-control arches-form-input hidden-xs" id="resource-name" style="width: 50%;" placeholder="Name">                                    
+                            <input class="form-control arches-form-input hidden-xs" id="resource-name" style="width: 50%;" placeholder="Name" data-bind='{value: _editing.NAME_E41.NAME_E41__value}'>                                    
 
                             <!-- Spacer (for xs screens) -->
                             <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
                             
-                            <select style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" placeholder="setting"> 
+                            <select style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" placeholder="setting" data-bind='{value: _editing.NAME_E41.NAME_TYPE_E55__value}'> 
                                 {% for type in form.domains.name_type %}
                                     <option value="{{type.valueid}}">{{type.value}}</option>
                                 {% endfor %}
